Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81751

qwaylandwindow_p.h:199:10: error: ‘bool QtWaylandClient::QWaylandWindow::startSystemMove(const QPoint&)’ marked ‘override’, but does not override

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.15.0 Alpha
    • 5.15.0 Alpha
    • QPA: Wayland
    • None
    • Linux/Wayland
    • 35dfb5a5d4a3758f48406c0b6d871000c9c59799 (qt/qtwayland/5.15)

      agent:2020/01/28 23:38:16 build.go:220: In file included from qwaylandshmbackingstore.cpp:40:
      agent:2020/01/28 23:38:16 build.go:220: qwaylandwindow_p.h:199:10: error: ‘bool QtWaylandClient::QWaylandWindow::startSystemMove(const QPoint&)’ marked ‘override’, but does not override
      agent:2020/01/28 23:38:16 build.go:220: bool startSystemMove(const QPoint &pos) override;
      agent:2020/01/28 23:38:16 build.go:220: ^~~~~~~~~~~~~~~
      agent:2020/01/28 23:38:16 build.go:220: Makefile:3490: recipe for target '.obj/qwaylandshmbackingstore.o' failed
      agent:2020/01/28 23:38:16 build.go:220: make[2]: *** [.obj/qwaylandshmbackingstore.o] Error 1
      agent:2020/01/28 23:38:16 build.go:220: make[2]: Leaving directory '/home/qt/work/qt/qtwayland/src/client'
      agent:2020/01/28 23:38:16 build.go:220: Makefile:75: recipe for target 'sub-client-make_first' failed
      agent:2020/01/28 23:38:16 build.go:220: make[1]: *** [sub-client-make_first] Error 2

      Build log: https://testresults.qt.io/logs/qt/qtwayland/63a7d95a056500c9fb8be2e1cc38b4bc578e484e/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-ca0cfe/7dcc2bd59e6528ed5d67b7785142e2f62d5934c7/build_1580253014/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1580251880
      Tested changes (refs/builds/qtci/5.15/1580251879):
      https://codereview.qt-project.org/c/qt/qt5/+/288302 Update submodules on '5.15' in qt/qt5

        For Gerrit Dashboard: QTBUG-81751
        # Subject Branch Project Status CR V

            johanhelsing Johan Helsing
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes