Client: Update to new signature for startSystemMove()

In 35dfb5a5, we temporarily disabled the override to let qt5.git update, now we
add it back with the new signature. This means QWindow::startSystemMove now
works for Wayland.

Task-number: QTBUG-81751
Task-number: QTBUG-73011
Change-Id: I1459300d6f7fb77a9ae07bb4f5c2b80722f9b02c
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@liri.io>